# oddlaws

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  justfile  package.json
.github/: pull_request_template.md
.github/workflows/: build-image.yml  build.yml  deploy-staging.yml  deploy.yml
config/: bot.Dockerfile
drizzle/meta/: 0000_snapshot.json  _journal.json
k8s/base/bot/: configmap.yaml  deployment.yaml  service.yaml
k8s/base/web/: deployment.yaml  service.yaml
k8s/overlays/staging/: ingress.yaml  kustomization.yaml
labs/discord-bot/: Cargo.toml  README.md
labs/discord-bot/src/: main.rs
labs/discord-bot/src/db/: mod.rs  published_events.rs  published_members.rs
labs/discord-bot/src/events/: handler.rs  mod.rs
src/: app.css  app.html
src/lib/components/: Header.svelte  ScreenshotGrid.svelte  ThemeSwitcher.svelte
src/lib/server/db/: member.ts  published-events.ts  schema.ts
src/routes/(guest)/: +layout.svelte
src/routes/(guest)/login/: +page.server.ts  +page.svelte
src/routes/(user)/: +layout.svelte  +page.server.ts  +page.svelte
src/routes/(user)/player/[name]/: +page.server.ts  +page.svelte
src/routes/(user)/skeever/: +layout@.svelte  +page.svelte
